[build] docs: update

--- a/docs/frontend/React/6.前端常见解决方案/前端调试技巧.md
+++ b/docs/frontend/React/6.前端常见解决方案/前端调试技巧.md
@@ -1,6 +1,6 @@
-### Network
+## Network
 
-#### 如何查看资源请求的上游和下游？
+### 如何查看资源请求的上游和下游？
 
 按住shift键，鼠标hover在请求上，可以查看请求的上游和下游，如下图所示，hover在`common.js`上，可以看到有一个绿色请求、一个红色请求。其中绿色请求表示`common.js`的上游请求，即谁触发了`common.js`请求，红色请求表示`common.js`的下游请求，即`common.js`又触发了什么请求。
 
@@ -10,7 +10,7 @@
 
 
 
-### 断点调试
+## 断点调试
 
 https://zh.javascript.info/debugging-chrome#debugger-ming-ling
 
@@ -28,7 +28,7 @@ https://zh.javascript.info/debugging-chrome#debugger-ming-ling
 
 
 
-#### 如何在微信小程序中打断点
+### 如何在微信小程序中打断点
 
 在小程序sources中打断点，找到对应js文件，右键选中某一行
 
@@ -40,7 +40,7 @@ https://zh.javascript.info/debugging-chrome#debugger-ming-ling
 
 
 
-### Ignore Library Code While Debugging
+## Ignore Library Code While Debugging
 
 https://dilshankelsen.com/ignore-library-code-while-debugging-browser/
 
@@ -53,3 +53,31 @@ chrome framework ignore list （苹果浏览器中可能名称叫BlackBox）
 ## Framework Ignore List
 
 支持正则表达式
+
+
+
+## 如何调试项目中的node_modules
+
+我在阅读vue源码时，需要console.log打印来调试一下，首先去node_modules对应包下的package.json查看main字段，该字段代表了包的入口文件。
+
+但是我们一般用的是脚手架项目，所以是module字段
+
+[关于package.json 中的 Module 字段是干嘛的](https://github.com/sunyongjian/blog/issues/37)
+
+
+
+## 使用performance减慢渲染
+
+在调试过程中，可以使用 `Performance` 接口来模拟较慢的渲染。
+
+你可以使用 `performance.now()` 方法获取当前时间，然后在渲染代码中添加一个循环，检查时间是否已经达到预期，如果还没有达到，就继续进行循环。这样可以模拟较长的渲染时间。
+
+```js
+const start = performance.now();
+const duration = 1000; // 设置渲染持续时间为1秒
+
+while ((performance.now() - start) < duration) {
+  // 渲染代码
+}
+```
+
