[build] docs: update

--- a/docs/frontend/JavaScript/ES6/1.深入理解Promise.md
+++ b/docs/frontend/JavaScript/ES6/1.深入理解Promise.md
@@ -274,14 +274,6 @@ Promise.allSettled([pm2, pm1, pm2, makePromise(5000)])
 
 ## Promise 防止阻塞
 
-**Promise** 对象用于表示一个异步操作的最终完成 (或失败), 及其结果值.
-
-语法:
-
-```js
-new Promise( function(resolve, reject) {...} /* executor */  );
-```
-
 promise防止阻塞
 
 ```js
@@ -315,6 +307,45 @@ timeTest().then(() => {
 ```
 
 对应的[async await版本](../async-await语法糖)
+
+## Promise防止阻塞
+
+1.Promise存储到变量中可以防止阻塞
+
+```tsx
+const ajax = (time: number) =>
+  new Promise((resolve) => {
+    setTimeout(() => {
+      console.log(time);
+      resolve(time);
+    }, time);
+  });
+
+const start2 = async () => {
+    console.time("test");
+    const timeout1 = ajax(2000);
+    const timeout2 = ajax(3000);
+    const timeout3 = ajax(4000);
+    await timeout1;
+    await timeout2;
+    await timeout3;
+    console.timeEnd("test");
+  };
+```
+
+赋值的本质 是因为Promise实例一旦建立就会立即执行,而后面的then是为了获取Promise实例的状态
+
+2.Promise.all
+
+```tsx
+const start = async () => {
+    console.time("test");
+    await Promise.all([ajax(2000), ajax(3000), ajax(4000)]);
+    console.timeEnd("test");
+  };
+```
+
+
 
 ## Promise的执行顺序
 
