--- a/docs/frontend/React/1.React学习/8-常见解决方案.md
+++ b/docs/frontend/React/1.React学习/8-常见解决方案.md
@@ -17,3 +17,59 @@ const CopyToClipboard = (ref: RefObject<HTMLElement>) => {
 <span className="copy" ref={node} onClick={() => CopyToClipboard(node)}>text</span>
 ```
 
+
+
+## immer
+
+produce精简语法
+
+```tsx
+import { produce } from 'immer';
+
+const nextState = produce(draftState => {
+  // 在这里对draftState进行修改
+});
+```
+
+
+
+```tsx
+export default function App() {
+  const [number, setNumber] = useState(0);
+  const handleClick = () => {
+    setNumber(produce((draft) => (draft += 1)));
+  };
+
+  return (
+    <div className="App">
+      <button onClick={handleClick}>{number}</button>
+    </div>
+  );
+}
+```
+
+
+
+完整的produce函数
+
+**produce(baseState, producer, patchListener)**
+
+1. `baseState`：表示当前的状态对象，即要进行修改的原始状态。
+2. `producer`：一个回调函数，用于对`baseState`进行修改。回调函数的参数是一个可变的draft对象，您可以在该对象上执行修改操作。
+3. `patchListener`（可选）：一个回调函数，在每次对draft对象进行修改后被调用。该回调函数会接收一个描述本次修改的`patches`数组作为参数。
+
+```tsx
+import produce from 'immer';
+
+const currentState = { count: 0 };
+
+const nextState = produce(currentState, draftState => {
+  return draftState.count += 1;
+}, patches => {
+  console.log('Patches:', patches);
+});
+
+console.log('Current State:', currentState);
+console.log('Next State:', nextState);
+```
+
