[build] docs: update

--- a/docs/frontend/CSS/2-文本及图片/文本溢出及换行.md
+++ b/docs/frontend/CSS/2-文本及图片/文本溢出及换行.md
@@ -99,4 +99,14 @@ https://developer.mozilla.org/zh-CN/docs/Web/CSS/word-break
 
 `word-break` 指定了怎样在单词内断行，word-break 用于对长单词打断。
 
-## 
+`keep-all` 保持所有单词连在一起，不进行断行
+
+
+
+### white-space: nowrap和word-break: keep-all的区别
+
+- `white-space: nowrap` 属性指定文本不换行，强制在一行内显示。这意味着文本会溢出容器的边界而不自动换行。
+
+- `word-break: keep-all` 属性指定保持所有单词连在一起，不进行断行。这意味着只有在遇到空格或其他可打断点的字符时才会进行换行，而不会在单词内部断行。
+
+这两个属性通常一起使用，以确保文本在容器中不换行，并且尽可能地保持每个单词完整显示。
