[build] docs: update

--- a/docs/frontend/JavaScript/二进制文件与流/4-前端文件下载.md
+++ b/docs/frontend/JavaScript/二进制文件与流/4-前端文件下载.md
@@ -18,6 +18,27 @@ Content-Disposition: form-data; name="fieldName"; filename="filename.jpg"
 
 文件流下载： 比如 pdf 或者 Excel时，一般是直接点击一个连接就可以直接下载，这一般是文件流的下载方式。
 
+通过代码设置
+
+```js
+Response.AppendHeader("Content-Disposition","attachment;filename=FileName.txt"); 
+```
+
+通过nginx设置
+
+https://blog.csdn.net/u011519550/article/details/104419016
+
+```nginx
+location ~ ^/file  {
+    if ($request_filename ~* ^.*?\.(txt|doc|pdf)$){
+            add_header Content-Disposition: 'attachment';
+            add_header  Content-Type application/octet-stream;
+    }        
+    root /home/wangjinyu;
+```
+
+
+
 ## GET下载
 
 ```js
