--- a/docs/frontend/React/1.React学习/1.2-React渲染优化.md
+++ b/docs/frontend/React/1.React学习/1.2-React渲染优化.md
@@ -274,6 +274,13 @@ export default function Main() {
 
 [codesandbox](https://codesandbox.io/s/react-memo-usememo-clqls)
 
+<iframe src="https://codesandbox.io/embed/react-memo-usememo-clqls?fontsize=14&hidenavigation=1&theme=dark"
+     style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
+     title="react-memo&amp;useMemo"
+     allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+     sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+   ></iframe>
+
 ## useCallback
 
 
