[build] docs: update

--- a/docs/frontend/React/1.React学习/1.2-React渲染优化.md
+++ b/docs/frontend/React/1.React学习/1.2-React渲染优化.md
@@ -283,9 +283,18 @@ export default function Main() {
 
 ## useCallback
 
-
-
 简单理解呢 useCallback 与 useMemo 一个缓存的是函数，一个缓存的是函数的返回值。
+
+所以被useCallback包裹的组件，在使用时可以当成标签来使用
+
+```tsx
+const Child = useCallback(()=> {
+  //...
+})
+return (
+  <Child />
+)
+```
 
 
 
