[build] docs: update

--- a/docs/frontend/JavaScript/ES6/2.JavaScript数组循环.md
+++ b/docs/frontend/JavaScript/ES6/2.JavaScript数组循环.md
@@ -1,6 +1,6 @@
-## JavaScript的循环
+# JavaScript的循环
 
-### 执行顺序
+## 执行顺序
 
 forEach内部的请求是并发执行的。由于`forEach`方法是同步执行的，它会立即遍历数组并按顺序依次执行回调函数。
 
@@ -19,3 +19,8 @@ for (const [index,item] of body.content.entries()) {
 }
 ```
 
+## 循环中断
+
+forEach方法无法直接中断循环。它会遍历数组的所有元素，并对每个元素执行指定的回调函数。不过，可以通过抛出异常来模拟中断循环的效果。
+
+可以考虑使用for循环或其他迭代方法，如for...of、map或reduce。
