--- a/docs/frontend/JavaScript/RegExp/常用正则表达式.md
+++ b/docs/frontend/JavaScript/RegExp/常用正则表达式.md
@@ -1,8 +1,4 @@
----
-title: 常用正则表达式
----
-
-
+## 常用正则表达式
 
 ### 手机号码
 
@@ -18,5 +14,27 @@ https://learnku.com/articles/31543
 
 ```js
 /^[a-zA-Z0-9!@#$%^&*()_+,\-./:;<=>?@[\\\]^_`{|}~]{8,}$/
+```
+
+
+
+### Windwos目录校验
+
+Windows目录校验 比如D:\abc
+
+```js
+/^(?:(?:[a-zA-Z]:)|(?:\\\\[a-zA-Z0-9_.$-]+\\[a-zA-Z0-9_.$-]+)*)\\(?:[^\\/:*?"<>|\r\n]+\\)*[^\\/:*?"<>|\r\n]*$/
+```
+
+Windows目录校验（2个反斜杠）比如D:\\\abc
+
+```js
+/^(?:(?:[a-zA-Z]:)|(?:\\\\[a-zA-Z0-9_.$-]+\\\\[a-zA-Z0-9_.$-]+)*)\\\\(?:[^\\\\/:*?"<>|\r\n]+\\\\)*[^\\\\/:*?"<>|\r\n]*$/
+```
+
+Windows目录校验，支持/以及\\\
+
+```js
+/^(?:(?:[a-zA-Z]:(?:\\\\|[\\/])[a-zA-Z0-9_.$-]+(?:\\\\|[\\/])[a-zA-Z0-9_.$-]+)*(?:\\\\|[\\/]?)?(?:[^\\\\/:*?"<>|\r\n]+(?:\\\\|[\\/]?)?)*$/
 ```
 
