--- a/docs/frontend/JavaScript/RegExp/常用正则表达式.md
+++ b/docs/frontend/JavaScript/RegExp/常用正则表达式.md
@@ -18,12 +18,20 @@ https://learnku.com/articles/31543
 
 
 
+### IP地址
+
+```js
+/((2(5[0-5]|[0-4]\d))|[0-1]?\d{1,2})(\.((2(5[0-5]|[0-4]\d))|[0-1]?\d{1,2})){3}/
+```
+
+
+
 ### Windwos目录校验
 
 Windows目录校验 比如D:\abc
 
 ```js
-/^(?:(?:[a-zA-Z]:)|(?:\\\\[a-zA-Z0-9_.$-]+\\[a-zA-Z0-9_.$-]+)*)\\(?:[^\\/:*?"<>|\r\n]+\\)*[^\\/:*?"<>|\r\n]*$/
+/^(?:[A-Za-z]:|[A-Za-z]:\\)(?:[^\\/:*?"<>|\r\n]+\\)*[^\\/:*?"<>|\r\n]*$/
 ```
 
 Windows目录校验（2个反斜杠）比如D:\\\abc
@@ -35,6 +43,6 @@ Windows目录校验（2个反斜杠）比如D:\\\abc
 Windows目录校验，支持/以及\\\
 
 ```js
-/^(?:(?:[a-zA-Z]:(?:\\\\|[\\/])[a-zA-Z0-9_.$-]+(?:\\\\|[\\/])[a-zA-Z0-9_.$-]+)*(?:\\\\|[\\/]?)?(?:[^\\\\/:*?"<>|\r\n]+(?:\\\\|[\\/]?)?)*$/
+/^(?:[A-Za-z]:|[A-Za-z]:[\\/])(?:[^\\/:*?"<>|\r\n]+[\\/])*[^\\/:*?"<>|\r\n]*$/
 ```
 
