--- a/docs/frontend/React/1.React学习/1.1-useContext和useReducer状态管理.md
+++ b/docs/frontend/React/1.React学习/1.1-useContext和useReducer状态管理.md
@@ -5,29 +5,50 @@
 > Provider 接收一个 `value` 属性，传递给消费组件。一个 Provider 可以和多个消费组件有对应关系。多个 Provider 也可以嵌套使用，里层的会覆盖外层的数据。
 
 ```tsx
-interface ThemeContext {
-  color: 'red' | 'blue'
+// 定义Context类型
+interface UserContextType {
+  user: string;
+  setUser: React.Dispatch<React.SetStateAction<string>>;
 }
 
-export const themeContext: Context<ThemeContext> = createContext<ThemeContext>({
-  color: 'red'
-})
+// 创建Context
+const UserContext = createContext<UserContextType | undefined>(undefined);
+
+// 自定义Hook，用于在组件中访问Context
+const useUserContext = () => {
+  const context = useContext(UserContext);
+  if (!context) {
+    throw new Error('useUserContext must be used within a UserContextProvider');
+  }
+  return context;
+};
+
+// 提供Context的组件
+const UserContextProvider: React.FC = ({ children }) => {
+  const [user, setUser] = useState<string>('');
+
+  return (
+    <UserContext.Provider value={{ user, setUser }}>
+      {children}
+    </UserContext.Provider>
+  );
+};
 
 export default function App() {
   return (
-  	<themeContext.Provider value={{ color: 'blue' }}>
+  	<themeContext.Provider value={{ user, setUser }}>
         <Topics />
     </themeContext.Provider>
   )
 }
 
 // in Topic
-import { themeContext } from './App'
+import { UserContext } from './App'
 
 const Topics: React.FC = () => {
-  return <themeContext.Consumer>
-    {({ color }) => <h3>{color}</h3>}
-  </themeContext.Consumer>
+  return <UserContext.Consumer>
+    {({ user }) => <h3>{user}</h3>}
+  </UserContext.Consumer>
 }
 ```
 
@@ -35,11 +56,11 @@ const Topics: React.FC = () => {
 
 ```tsx
 import { useContext } from 'react'
-import { themeContext } from './App'
+import { UserContext } from './App'
 
 const Topics: React.FC = () => {
-  const theme = useContext(themeContext)
-  return <h3>{theme.color}</h3>
+  const ctx = useContext(UserContext)
+  return <h3>{ctx.user}</h3>
 }
 ```
 
@@ -205,5 +226,4 @@ const About: React.FC = () => {
   )
 }
 ```
-
 
