--- a/docs/frontend/React/1.React学习/1.1-useContext和useReducer状态管理.md
+++ b/docs/frontend/React/1.React学习/1.1-useContext和useReducer状态管理.md
@@ -15,7 +15,7 @@ interface UserContextType {
 const UserContext = createContext<UserContextType | undefined>(undefined);
 
 // 自定义Hook，用于在组件中访问Context
-const useUserContext = () => {
+export const useUserContext = () => {
   const context = useContext(UserContext);
   if (!context) {
     throw new Error('useUserContext must be used within a UserContextProvider');
