--- a/docs/frontend/JavaScript/事件相关/键盘事件.md
+++ b/docs/frontend/JavaScript/事件相关/键盘事件.md
@@ -5,3 +5,5 @@ https://www.jianshu.com/p/8f839f558319
 - `keydown`：按下键盘键
 - `keypress`：紧接着`keydown`事件触发（只有按下字符键时触发）
 - `keyup`：释放键盘键
+
+触发顺序为：keydown -> keypress ->keyup
