[build] docs: update

--- a/docs/frontend/React/1.React学习/1.2-React渲染优化.md
+++ b/docs/frontend/React/1.React学习/1.2-React渲染优化.md
@@ -1,4 +1,4 @@
-# React组件缓存及渲染优化
+## React组件缓存及渲染优化
 
 - react组件更新是自上而下的，即先父后子
 
@@ -319,3 +319,55 @@ React 通过大胆的假设，并基于假设提出相关策略，成功的将 O
 #### Tree diff
 
 React 只对虚拟 DOM 树进行分层比较，不考虑节点的跨层级比较。
+
+
+
+## React组件懒加载
+
+在 React 中异步加载组件可以采用两种方式：使用import()函数或者使用React.lazy
+
+**1. 使用React.lazy：**
+
+```tsx
+import { lazy, Suspense } from 'react';
+
+const AsyncComponent = lazy(() => import('./AsyncComponent'));
+
+function App() {
+  return (
+    <div>
+      <Suspense fallback={<div>Loading...</div>}>
+        <AsyncComponent />
+      </Suspense>
+    </div>
+  );
+}
+```
+需要注意的是，在使用React.lazy时，只能用在默认导出的组件上
+
+**2. 使用import()函数：**
+
+```tsx
+import { useState, useEffect } from 'react';
+
+function App() {
+  const [AsyncComponent, setAsyncComponent] = useState(null);
+
+  useEffect(() => {
+    // 异步加载组件
+    import('./AsyncComponent').then((module) => {
+      setAsyncComponent(module.default);
+    });
+  }, []);
+
+  if (!AsyncComponent) {
+    return <div>Loading...</div>;
+  }
+
+  return <AsyncComponent />;
+}
+```
+
+> React16.6.0 版本开始，React 原生提供了 code-splitting 与组件动态加载的方案，引入了 lazy 函数，同时也支持使用 Suspense 与 ErrorBoundary 来进行异常处理与 fallback 展示。
+
+所以我们在React中使用lazy和import()加载异步组件后，组件默认就是split过的，chunk名就是组件文件名
