--- a/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
+++ b/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
@@ -344,7 +344,26 @@ type WatchSource<T> =
 
 https://vue3js.cn/docs/zh/guide/composition-api-provide-inject.html
 
+## Vue3自定义指令
 
+https://cn.vuejs.org/guide/reusability/custom-directives.html#introduction
+
+```vue
+<script setup>
+const vColor: Directive<any, string> = {
+  beforeMount: (el: HTMLDivElement, binding) => {
+    console.log('v-color', el, binding)
+    el.style.color = binding.value
+  }
+}
+</script>
+```
+
+```ts
+export type Directive<T = any, V = any> = ObjectDirective<T, V> | FunctionDirective<T, V>;
+```
+
+Directive泛型有两个参数，第一个是el的类型，即dom类型；第二个是自定义指令参数的类型，即binding.value的类型
 
 ### script setup内如何获取props
 
