[build] docs: update

--- a/docs/frontend/React/1.React学习/4.1-自定义hooks解读.md
+++ b/docs/frontend/React/1.React学习/4.1-自定义hooks解读.md
@@ -1,3 +1,5 @@
+# 自定义hooks
+
 ## useAsyncEffect
 
 下面是 `useAsyncEffect` 的完整源代码：
@@ -53,3 +55,32 @@ export default useAsyncEffect;
 
 - `useEffect` 用于处理副作用，包括同步和异步操作，但不会等待异步操作完成。
 - `useAsyncEffect` 通常用于处理异步操作，它会等待异步操作完成后再触发下一次渲染，确保渲染时数据已经准备好。
+
+
+
+## useEventListener
+
+```tsx
+import { useEffect } from 'react';
+
+function useEventListener(eventName, handler, element = window) {
+  useEffect(() => {
+    if (element && element.addEventListener) {
+      // 添加事件监听器
+      element.addEventListener(eventName, handler);
+
+      // 清理函数，用于卸载组件时移除事件监听器
+      return () => {
+        element.removeEventListener(eventName, handler);
+      };
+    }
+  }, [eventName, handler, element]);
+}
+
+export default useEventListener;
+```
+
+**useEventListener** 自动处理了事件监听器的清理，它会在组件卸载时自动移除事件监听器，以防止内存泄漏。
+
+**addEventListener** 要手动移除事件监听器，否则可能会导致内存泄漏。
+
