--- a/docs/frontend/面试/1.md
+++ b/docs/frontend/面试/1.md
@@ -21,3 +21,17 @@ import { add } from 'lodash-es' // 支持
 
 
 <img src="/Users/cheng/Library/Application Support/typora-user-images/image-20220810100605663.png" alt="image-20220810100605663" style="zoom:70%;" />
+
+
+
+使用lodash之前的大小
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20231020164837256.png" alt="image-20231020164837256" style="zoom:67%;" />
+
+引入lodash并使用后
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20231020165449685.png" alt="image-20231020165449685" style="zoom:67%;" />
+
+而使用lodash-es
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20231020165625226.png" alt="image-20231020165625226" style="zoom:67%;" />
