[build] docs: update

--- a/docs/frontend/React/1.React学习/6.1-React-Router6.md
+++ b/docs/frontend/React/1.React学习/6.1-React-Router6.md
@@ -156,7 +156,7 @@ function SendInvoice() {
 
 ## React Router6嵌套路由
 
-使用createBrowserRouter创建配置式路由
+1. 使用createBrowserRouter创建配置式路由
 
 ```tsx
 const routes: RouteObject[] = [
@@ -198,6 +198,30 @@ const App = () => <RouterProvider router={router} />
      allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
+2.使用useRoutes创建配置式路由
+
+```tsx
+const routes: RouteObject[] = []
+
+function Index() {
+  return <>{useRoutes(routes)}</>;
+}
+
+export default function App() {
+  return (
+    <div className="App">
+      {/* <RouterProvider router={router} /> */}
+      <Router>
+        <Index />
+      </Router>
+    </div>
+  );
+}
+```
+
+useRoutes 必须在 `<Router> `组件的上下文中使用
+
+
 
 ## token无效时跳转登录页
 
