--- a/docs/frontend/React/1.React学习/6.1-React-Router6.md
+++ b/docs/frontend/React/1.React学习/6.1-React-Router6.md
@@ -29,6 +29,8 @@ Route组件属性
 
 类似于Vue Router中的router-view
 
+对应hooks 为 `useOutlet`，二者功能相同
+
 
 
 ### Link
@@ -156,7 +158,7 @@ function SendInvoice() {
 
 ## React Router6嵌套路由
 
-1. 使用createBrowserRouter创建配置式路由
+### 1.使用createBrowserRouter创建配置式路由
 
 ```tsx
 const routes: RouteObject[] = [
@@ -198,7 +200,7 @@ const App = () => <RouterProvider router={router} />
      allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
-2.使用useRoutes创建配置式路由
+### 2.使用useRoutes创建配置式路由
 
 ```tsx
 const routes: RouteObject[] = []
@@ -221,9 +223,13 @@ export default function App() {
 
 useRoutes 必须在 `<Router> `组件的上下文中使用
 
+**RouterProvider**对比**useRoutes**
 
+`RouterProvider` 用于整个应用的静态路由配置，而 `useRoutes` 用于在特定组件内部进行动态路由匹配和渲染
 
 ## token无效时跳转登录页
+
+### 定义高阶组件 Auth
 
 实现类似于beforeEach功能的导航守卫
 
