fix: update 油猴脚本

--- a/docs/software/油猴脚本.md
+++ b/docs/software/油猴脚本.md
@@ -111,3 +111,52 @@ document.addEventListener('load', function(e) {
 }, true)
 ```
 
+## 油猴脚本监听元素生成
+
+```
+// ==UserScript==
+// @name         监听特定元素生成示例
+// @namespace    http://your-namespace.com
+// @version      1.0
+// @description  示例：监听特定元素生成并执行操作
+// @author       Your Name
+// @match        https://example.com/*  // 匹配你想要脚本运行的网页
+// @grant        none
+// ==/UserScript==
+
+(function() {
+    'use strict';
+
+    // 获取要监听的目标元素
+    const targetElement = document.getElementById('market-selling-list');
+
+    if (!targetElement) {
+        console.error('目标元素不存在');
+        return;
+    }
+
+    // 创建一个 MutationObserver 监听器
+    const observer = new MutationObserver(function(mutationsList, observer) {
+        // 在每次 DOM 变化时调用此函数
+        for (let mutation of mutationsList) {
+            if (mutation.type === 'childList' && mutation.addedNodes.length > 0) {
+                // 检查是否有元素被添加到 DOM 中
+                for (let addedNode of mutation.addedNodes) {
+                    // 在这里执行你的操作，例如：
+                    if (addedNode instanceof HTMLElement) {
+                        console.log('新元素已生成:', addedNode);
+                        // 在这里执行你的自定义操作
+                        // 例如，可以添加事件监听器、修改元素属性等
+                    }
+                }
+            }
+        }
+    });
+
+    // 配置 MutationObserver 监听哪些 DOM 变化
+    const config = { childList: true, subtree: true };
+
+    // 开始监听目标元素
+    observer.observe(targetElement, config);
+})();
+```
