[build] docs: update

--- a/docs/frontend/React/1.React学习/1.1-React组件通信.md
+++ b/docs/frontend/React/1.React学习/1.1-React组件通信.md
@@ -145,3 +145,47 @@ React中是单向数据流，数据只能从父组件通过属性的方式传给
 Uncaught Invariant Violation：太多的重新渲染
 
 https://www.jianshu.com/p/bf197fba2fa5
+
+
+
+## 父组件调用子组件的方法
+
+**使用函数回调和 `useRef`**
+
+```tsx
+import React, { useRef } from 'react';
+
+function ChildComponent({ onChildMethod }) {
+  // 子组件中的方法
+  const doSomething = () => {
+    alert('子组件执行了某个操作');
+  };
+
+  // 当需要执行子组件方法时，调用父组件传递的方法
+  onChildMethod(doSomething);
+
+  return <div>子组件</div>;
+}
+
+function ParentComponent() {
+  const childRef = useRef();
+
+  const callChildMethod = (method) => {
+    if (childRef.current) {
+      method();
+    }
+  };
+
+  return (
+    <div>
+      <ChildComponent onChildMethod={callChildMethod} />
+      <button onClick={() => callChildMethod()}>调用子组件方法</button>
+    </div>
+  );
+}
+
+export default ParentComponent;
+```
+
+**还可以使用 `forwardRef` 和 `useImperativeHandle`**
+
