--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -63,3 +63,26 @@ https://cn.vuejs.org/api/built-in-directives.html#v-memo
 
 搭配 `v-for` 使用 `v-memo`，确保两者都绑定在同一个元素上。**`v-memo` 不能用在 `v-for` 内部。**
 
+
+
+## h渲染函数
+
+Vue3将`$createElement`从this上移除了，改为使用h
+
+```vue
+<script setup lang="ts">
+import { h } from 'vue'
+
+const renderFunc = () => h('div', 'xxx')
+</script>
+
+<template>
+  <component :is="renderFunc"></component>
+</template>
+```
+
+## shallowRef
+
+当ref的参数是非常大且具有深层次嵌套的数组对象时，可能会导致性能问题。
+
+**使用 `shallowRef`**: 如果您有一个数组对象，而不需要追踪对象属性的变化，可以使用 `shallowRef` 而不是 `ref`。`shallowRef` 只会追踪对象本身的变化，而不会深度追踪嵌套对象的属性。
