[build] docs: update

--- a/docs/frontend/React/1.React学习/1.2-React渲染优化.md
+++ b/docs/frontend/React/1.React学习/1.2-React渲染优化.md
@@ -144,6 +144,16 @@ export default function Main() {
 
 <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20230521213820097.png" alt="image-20230521213820097" style="zoom:50%;" />
 
+### 第二个参数
+
+第二个参数是一个函数，返回true，不会触发render，返回false则会
+
+```ts
+propsAreEqual?: (prevProps: Readonly<P>, nextProps: Readonly<P>) => boolean
+```
+
+
+
 
 
 ## useMemo
