[build] docs: update

--- a/docs/frontend/React/6.前端常见解决方案/前端调试技巧.md
+++ b/docs/frontend/React/6.前端常见解决方案/前端调试技巧.md
@@ -81,3 +81,10 @@ while ((performance.now() - start) < duration) {
 }
 ```
 
+
+
+## CSS classname debug
+
+classname变化时调试
+
+https://blog.csdn.net/zxxzxx23/article/details/90705073
