[build] docs: update

--- a/docs/frontend/React/1.React学习/6.1-React-Router6.md
+++ b/docs/frontend/React/1.React学习/6.1-React-Router6.md
@@ -315,3 +315,117 @@ export const useQueryParams = <T>(): QueryParams<T> =>
     Object.fromEntries(new URLSearchParams(location.search).entries()) as QueryParams<T>;
 ```
 
+
+
+## React Router 6有类似于VueRouter的addRoute方法吗
+
+在 React Router 中，路由配置是静态的，通常是在组件中声明的。
+
+然而，你可以通过使用 `useRoutes` 钩子以编程的方式动态创建路由
+
+```tsx
+const App = () => {
+  // 定义动态路由配置
+  const dynamicRoutes = {
+    path: '/',
+    element: <Home />, // 默认首页
+    children: [
+      { path: 'about', element: <About /> },
+      // 可以根据需要添加更多的动态路由
+    ],
+  };
+
+  // 使用 useRoutes 钩子将动态路由配置应用到实际路由中
+  const routeElement = useRoutes(dynamicRoutes);
+
+  return (
+    <Router>
+      <Routes>{routeElement}</Routes>
+    </Router>
+  );
+};
+```
+
+
+
+## React.lazy和Vite import.meta.glob实现懒加载和动态导入
+
+```tsx
+import './styles.css';
+import { createBrowserRouter, RouteObject, RouterProvider } from 'react-router-dom';
+import { Suspense, lazy } from 'react';
+
+const modules: Record<string, () => Promise<any>> = import.meta.glob('./pages/**/*.tsx');
+console.log('modules: ', modules);
+
+const createLazyComponent = (path: string) => {
+  const Component = lazy(modules[`./${path}.tsx`]);
+  return (
+    <Suspense fallback={<div>loading...</div>}>
+      <Component key={path} />
+    </Suspense>
+  );
+};
+
+const handleAsyncRoutes = (routes: RouteConfig[]): any =>
+  routes.map((route) => {
+    console.group('route: ', route);
+    if (route.children) {
+      route.children = handleAsyncRoutes(route.children!);
+    }
+    if (route.componentPath) {
+      return {
+        ...route,
+        path: route.path,
+        element: createLazyComponent(route.componentPath)
+      };
+    } else return route;
+  });
+
+type RouteConfig = RouteObject & {
+  componentPath?: string;
+};
+
+const routes: RouteConfig[] = [
+  {
+    path: '/',
+    componentPath: 'pages/AppLayout',
+    // element: <AppLayout />,
+    children: [
+      { path: '', element: <span>/</span> },
+      { path: 'about', element: <span>About</span> },
+      { path: 'test', element: <span>Test</span> },
+      {
+        path: 'layout',
+        // element: <Layout />,
+        componentPath: 'pages/Layout',
+        children: [
+          { path: '1', element: <span>layout1</span> },
+          { path: '2', element: <span>layout2</span> },
+          {
+            path: '3',
+            // element: <Layout3 />,
+            componentPath: 'pages/Layout3',
+            children: [
+              { path: '1', element: <span>layout/3-1</span> },
+              { path: '2', element: <span>layout/3-2</span> }
+            ]
+          }
+        ]
+      }
+    ]
+  },
+  { path: '/login', element: <span>Login</span> }
+];
+const routesFinal = handleAsyncRoutes(routes);
+const router = createBrowserRouter(routesFinal);
+
+export default function App() {
+  return (
+    <div className='App'>
+      <RouterProvider router={router} />
+    </div>
+  );
+}
+```
+
