[build] 更新目录结构

--- a/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
+++ b/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
@@ -206,7 +206,9 @@ const App = () => <RouterProvider router={router} />
 const routes: RouteObject[] = []
 
 function Index() {
-  return <>{useRoutes(routes)}</>;
+  const element = useRoutes(routes);
+  return element;
+  // 或者直接 return useRoutes(routes)
 }
 
 export default function App() {
@@ -220,6 +222,8 @@ export default function App() {
   );
 }
 ```
+
+==useRoutes() may be used only in the context of a \<Router> component.==
 
 useRoutes 必须在 `<Router> `组件的上下文中使用
 
@@ -371,9 +375,12 @@ const handleAsyncRoutes = (routes: RouteConfig[]): any =>
   routes.map((route) => {
     console.group('route: ', route);
     if (route.children) {
-      route.children = handleAsyncRoutes(route.children!);
+      route.children = handleAsyncRoutes(route.children);
     }
-    if (route.componentPath) {
+    if (route.path && route.element) {
+      return route;
+    }
+    if (route.componentPath && !route.element) {
       return {
         ...route,
         path: route.path,
@@ -383,7 +390,9 @@ const handleAsyncRoutes = (routes: RouteConfig[]): any =>
   });
 
 type RouteConfig = RouteObject & {
-  componentPath?: string;
+  name?: string;
+  componentPath?: any;
+  children?: RouteConfig[];
 };
 
 const routes: RouteConfig[] = [
@@ -427,5 +436,94 @@ export default function App() {
     </div>
   );
 }
+```
+
+
+
+
+
+## React Router6实现全局导航守卫BeforeEach
+
+```tsx
+import { useContext } from 'react';
+import { Navigate, useLocation } from 'react-router-dom';
+import { globalContext } from '../App';
+import { routes } from '.';
+
+const RouterBeforeEach = ({ children }) => {
+  const { isLogin } = useContext(globalContext);
+  const location = useLocation();
+  console.log('to: ', location);
+  const to = routes.find((route) => route.path === location.pathname);
+
+  // 如果未登录，且去的页面不是登录页，则重定向到登录页
+  if (!isLogin && to?.path !== '/login') {
+    return <Navigate to='/login' />;
+  }
+
+  // 如果已登录，不可直接去登录页，应通过logout退出登录来跳转登录页
+  if (to?.path === '/login' && isLogin) {
+    return <Navigate to='/' />;
+  }
+  // 需要鉴权的页面
+  if (to?.meta?.requireAuth) {
+    // 判断有没有这个页面的权限
+    // ...
+    // 没有则跳转至指定页
+    return <Navigate to='/unpermission' />;
+  }
+
+  return children;
+};
+export default RouterBeforeEach;
+```
+
+使用时给routes内需要拦截的路由element包起来即可
+
+由于我这里使用的是嵌套路由，所以只要包第一层的路由即可
+
+```tsx
+const routes: RouteConfig[] = [
+  {
+    path: '/login',
+    element: (
+      <RouterBeforeEach>
+        <Login />
+      </RouterBeforeEach>
+    )
+  },
+  {
+    path: '/',
+    errorElement: <Error />,
+    element: (
+      <RouterBeforeEach>
+        <AppLayout />
+      </RouterBeforeEach>
+    ),
+    children: [
+      { path: '', element: <span>/</span> },
+      { path: 'about', element: <About /> },
+      { path: 'test', element: <Test /> },
+      {
+        path: 'layout',
+        // element: <Layout />,
+        componentPath: 'pages/layout1/index',
+        children: [
+          { path: '1', componentPath: 'pages/layout1-1/index' },
+          { path: '2', componentPath: 'pages/layout1-2/index' },
+          {
+            path: '3',
+            componentPath: 'pages/layout1-3/index',
+            children: [
+              { path: '1', componentPath: 'pages/layout1-3-1/index' },
+              { path: '2', componentPath: 'pages/layout1-3-2/index' }
+            ]
+          }
+        ]
+      }
+    ]
+  },
+  { path: '*', element: <NotFound /> }
+];
 ```
 
