[build] docs: update

--- a/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
+++ b/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
@@ -454,6 +454,9 @@ const RouterBeforeEach = ({ children }) => {
   const { isLogin } = useContext(globalContext);
   const location = useLocation();
   console.log('to: ', location);
+  // 获取路由元信息
+  // TODO：这里如果是多级路由嵌套，就要用到递归
+  // 考虑到每次路由跳转都会去递归，可能会造成性能问题，可以在路由初始化时，将所有的路由元信息都存入一个Map中，这样路由变化时，直接从Map中取就可以了
   const to = routes.find((route) => route.path === location.pathname);
 
   // 如果未登录，且去的页面不是登录页，则重定向到登录页
