--- a/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
+++ b/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
@@ -6,23 +6,9 @@ antv g6
 
 https://jsplumbtoolkit.com/
 
+## Demo
 
-
-## Antv G6
-
-G6.registerNode(nodeType, config, extendShape);
-
-- `nodeType` (字符串): 表示节点类型的名称。
-
-- `config` (对象): 包含节点的配置信息，例如节点的形状、样式、大小等。
-
-- `extendShape` (字符串): 可选参数，表示节点的形状是否继承自已注册的其他节点类型。
-
-  可选值有circle、rect、triangle
-
-
-
-
+先来看一段代码
 
 ```js
 import G6 from '@antv/g6';
@@ -62,6 +48,7 @@ for (let i = 0; i < 6; i++) {
   edges.push({ source: 'center', target: id, type: 'can-running' });
 }
 
+// 注册叶子节点
 G6.registerNode(
   'leaf-node',
   {
@@ -97,7 +84,7 @@ G6.registerNode(
   },
   'rect',
 );
-
+// 注册中心节点
 G6.registerNode(
   'center-node',
   {
@@ -196,6 +183,10 @@ const graph = new G6.Graph({
       stroke: '#b5b5b5',
     },
   },
+  modes: {
+    default: ['drag-canvas', 'zoom-canvas'],
+    edit: ['click-select'],
+  }
 });
 graph.data({ nodes, edges });
 graph.render();
@@ -221,3 +212,173 @@ if (typeof window !== 'undefined')
   };
 ```
 
+
+
+## Graph
+
+Graph 是 G6 图表的载体，所有的 G6 节点实例操作以及事件，行为监听都在 Graph 实例上进行。Graph 的初始化通过 new 进行实例化，实例化时需要传入需要的参数。
+
+```js
+const graph = new G6.Graph({
+  container: 'container',
+  width,
+  height,
+  // 设置画布的交互模式，存在 default 和 edit 两种 mode（交互模式）
+  modes: {
+    default: ['drag-canvas'],
+  },
+  // GraphOptions.layout.type指定图的布局算法
+  
+  layout: {
+    type: 'radial',
+    unitRadius: 50,
+    center: [500, 300],
+  },
+  // 默认节点
+  defaultNode: {
+    style: {
+      fill: '#DEE9FF',
+      stroke: '#5B8FF9',
+    },
+  },
+  defaultEdge: {
+    style: {
+      stroke: '#b5b5b5',
+    },
+  },
+});
+```
+
+### GraphOptions.layout
+
+常见的布局类型包括：
+
+- `'force'`：力导向布局。
+- `'circular'`：环形布局。
+- `'grid'`：网格布局。
+- `'radial'`：径向布局。
+- `'dagre'`：使用 Dagre 库的有向无环图 (DAG) 布局。
+
+```js
+graph.data({ nodes, edges });
+graph.render();
+graph.fitView();
+```
+
+**`graph.data({ nodes, edges });`**:
+
+- 这一行代码用于将图的数据传递给 G6 图实例。其中 `nodes` 和 `edges` 是包含节点和边信息的数组对象。这一步是为了将数据与图实例关联起来，以便 G6 知道要渲染的内容。
+
+**`graph.render();`**:
+
+- 这一行代码用于渲染图。一旦数据传递给图实例，通过调用 `render` 方法，G6 将根据提供的数据在图容器中绘制相应的节点和边。
+
+**`graph.fitView();`**:
+
+- 这一行代码用于调整视图，使整个图适应容器的大小。它会根据当前图的布局和节点位置，自动调整缩放和平移，以确保整个图形在可视区域内可见。
+
+## Node节点
+
+[节点的通用属性](https://g6.antv.antgroup.com/manual/middle/elements/nodes/default-node#%E8%8A%82%E7%82%B9%E7%9A%84%E9%80%9A%E7%94%A8%E5%B1%9E%E6%80%A7)
+
+type是节点的类型，形状，默认circle圆形
+
+
+
+### 设置默认节点为图片
+
+可以在初始化graph时设置defaultNode
+
+```js
+defaultNode: {
+    style: {
+      fill: '#DEE9FF',
+      stroke: '#5B8FF9',
+    },
+    width: 20,
+    height: 20,
+    size: 30,
+    // label: '123rr',
+    img: 'https://gw.alipayobjects.com/zos/rmsportal/XuVpGqBFxXplzvLjJBZB.svg',
+    type: 'image',
+  },
+```
+
+效果图如下：
+
+<img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20231129141254295.png" alt="image-20231129141254295" style="zoom: 50%;" />
+
+## Antv G6
+
+### G6.registerNode
+
+G6.registerNode(nodeType, config, extendShape);
+
+- `nodeType` (字符串): 表示节点类型的名称。
+
+- `config` (对象): 包含节点的配置信息，例如节点的形状、样式、大小等。
+
+- `extendShape` (字符串): 可选参数，表示节点的形状是否继承自已注册的其他节点类型。
+
+  可选值有circle、rect、triangle
+
+G6.registerNode用于注册自定义节点类型，过这个方法，你可以定义新的节点样式和行为，并在图中使用这些自定义节点类型。
+
+```tsx
+G6.registerNode(
+  'leaf-node',  // 自定义节点类型的名称
+  {
+    afterDraw(cfg, group) {
+      // 在节点绘制后执行的操作
+      group.addShape('circle', {
+        attrs: {
+          x: 0,
+          y: 0,
+          r: 5,
+          fill: cfg.color || '#5B8FF9',
+        },
+        name: 'circle-shape',
+      });
+    },
+    getAnchorPoints() {
+      return [
+        [0, 0.5],
+        [1, 0.5],
+      ];
+    },
+  },
+  'rect'  // 扩展自 'rect' 类型的节点
+);
+```
+
+### afterDraw
+
+afterDraw(cfg, group)
+
+afterDraw方法是自定义节点绘制后执行的回调函数，该函数有两个参数：`cfg` 和 `group`。
+
+- `cfg` 是一个包含节点数据的对象。这个对象包含了节点的各种属性，例如节点的位置 (`x`, `y`)、颜色、大小、标签等。在 `afterDraw` 函数中，你可以通过 `cfg` 来获取节点的配置信息，以便根据这些信息进行绘制或执行其他操作。
+- `group` 是一个 G6 的图形分组（group）对象。这个分组对象是用于包装节点中的图形元素，例如圆形、矩形等。通过 `group`，你可以向节点中添加新的图形元素，如在上述例子中添加的圆形。
+
+
+
+## 组件销毁及监听窗口缩放事件
+
+```js
+if (typeof window !== 'undefined')
+  window.onresize = () => {
+    if (!graph || graph.get('destroyed')) return;
+    if (!container || !container.scrollWidth || !container.scrollHeight) return;
+    graph.changeSize(container.scrollWidth, container.scrollHeight);
+  };
+```
+
+这段代码是用于监听窗口大小变化事件，并在窗口大小发生变化时，调整图形的大小以适应新的窗口尺寸。
+
+if (typeof window !== 'undefined') 检查是否浏览器环境
+
+然后监听window.onresize事件，在回调函数中，首先检查图实例 `graph` 是否存在且未被销毁（`graph.get('destroyed')`），以避免在图已销毁的情况下执行操作。
+
+接着，检查容器元素 `container` 是否存在且具有有效的滚动宽度和高度。
+
+最后，通过 `graph.changeSize` 方法，根据容器的当前滚动宽度和高度，调整图的大小以适应新的窗口尺寸。
