[build] docs: update

--- a/docs/frontend/React/1-1.React学习/1.1-useContext和useReducer状态管理.md
+++ b/docs/frontend/React/1-1.React学习/1.1-useContext和useReducer状态管理.md
@@ -227,3 +227,35 @@ const About: React.FC = () => {
 }
 ```
 
+
+
+## 从Storage中获取全局状态和context配合使用
+
+```tsx
+interface IGlobalContext {
+  isLogin: boolean;
+  setLogin: React.Dispatch<React.SetStateAction<boolean>>;
+}
+// 创建context并分配默认值
+export const globalContext = createContext<IGlobalContext>({
+  isLogin: JSON.parse(localStorage.getItem('isLogin') || 'false'),
+  setLogin: () => {}
+});
+
+export default function App() {
+  const [isLogin, setLogin] = useState<boolean>(() => {
+    const storeValue = localStorage.getItem('isLogin');
+    return storeValue ? JSON.parse(storeValue) : false;
+  });
+  return (
+    <div className='App'>
+      <globalContext.Provider value={{ isLogin, setLogin }}>
+        <Suspense fallback={<div>loading...</div>}>
+          <RouterProvider router={router} />
+        </Suspense>
+      </globalContext.Provider>
+    </div>
+  );
+}
+```
+
