--- a/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
+++ b/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
@@ -448,16 +448,18 @@ export default function App() {
 import { useContext } from 'react';
 import { Navigate, useLocation } from 'react-router-dom';
 import { globalContext } from '../App';
-import { routes } from '.';
+import { rotuesMap } from '.';
 
-const RouterBeforeEach = ({ children }) => {
+type RouterBeforeEachProps = {
+  children: JSX.Element;
+};
+
+const RouterBeforeEach: React.FC<RouterBeforeEachProps> = ({ children }) => {
   const { isLogin } = useContext(globalContext);
   const location = useLocation();
-  console.log('to: ', location);
-  // 获取路由元信息
-  // TODO：这里如果是多级路由嵌套，就要用到递归
-  // 考虑到每次路由跳转都会去递归，可能会造成性能问题，可以在路由初始化时，将所有的路由元信息都存入一个Map中，这样路由变化时，直接从Map中取就可以了
-  const to = routes.find((route) => route.path === location.pathname);
+
+  const to = rotuesMap.get(location.pathname);
+  console.log('to: ', to);
 
   // 如果未登录，且去的页面不是登录页，则重定向到登录页
   if (!isLogin && to?.path !== '/login') {
@@ -469,11 +471,20 @@ const RouterBeforeEach = ({ children }) => {
     return <Navigate to='/' />;
   }
   // 需要鉴权的页面
-  if (to?.meta?.requireAuth) {
+  if (to?.meta?.requireAuth && !isLogin) {
     // 判断有没有这个页面的权限
     // ...
     // 没有则跳转至指定页
     return <Navigate to='/unpermission' />;
+  }
+  if (to?.redirect) {
+    // 这里需要判断redirect是绝对路径，还是相对路径
+    if (to.redirect.startsWith('/')) {
+      return <Navigate to={to.redirect} />;
+    } else {
+      const redirect = `${to.fullPath}/${to.redirect}`.replace(/\/\//, '/');
+      return <Navigate to={redirect} />;
+    }
   }
 
   return children;
@@ -530,3 +541,4 @@ const routes: RouteConfig[] = [
 ];
 ```
 
+详细代码：https://github.com/fncheng/react-router6-guard/blob/master/src/router/index.tsx
