[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
+++ b/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
@@ -27,12 +27,17 @@ const centerNode = {
 nodes.push(centerNode);
 // Add 4 nodes on the left
 for (let i = 0; i < 4; i++) {
-  const id = 'left' + i;
+  const id = 'primary' + i;
   nodes.push({
     id,
-    x: 250,
-    y: (i + 1) * 100 + 50,
+    // x: 250,
+    // y: (i + 1) * 100 + 50,
+    // x: Math.random() * 200, // 随机 x 坐标，适当调整范围
+    // y: Math.random() * 500, // 随机 y 坐标
     type: 'leaf-node',
+    text: '已定义的MDM主机',
+    label: '10.0.0.213',
+    style: { fill: '#1677FF', stroke: '#fff' }
   });
   edges.push({ source: id, target: 'center', type: 'can-running' });
 }
@@ -41,12 +46,43 @@ for (let i = 0; i < 6; i++) {
   const id = 'right' + i;
   nodes.push({
     id,
-    x: 750,
-    y: i * 100 + 50,
+    // x: 750,
+    // y: i * 100 + 50,
     type: 'leaf-node',
+    text: '有挂载数据的MDM主机',
+    label: '10.0.0.213',
+    style: { fill: 'orange', stroke: '#fff' }
   });
   edges.push({ source: 'center', target: id, type: 'can-running' });
 }
+
+for (let i = 0; i < 3; i++) {
+  const id = 'success' + i;
+  nodes.push({
+    id,
+    // x: 750,
+    // y: i * 100 + 50,
+    type: 'leaf-node',
+    text: '已验证的主机',
+    label: '10.0.0.213',
+    style: { fill: '#52c41a', stroke: '#fff' },
+  });
+  edges.push({ source: 'center', target: id, type: 'can-running' });
+}
+for (let i = 0; i < 2; i++) {
+  const id = 'fail' + i;
+  nodes.push({
+    id,
+    // x: 750,
+    // y: i * 100 + 50,
+    type: 'leaf-node',
+    text: '无法连接的主机',
+    label: '10.0.0.213',
+    style: { fill: '#ff4d4f', stroke: '#fff' }
+  });
+  edges.push({ source: 'center', target: id, type: 'can-running' });
+}
+
 
 // 注册叶子节点
 G6.registerNode(
@@ -69,7 +105,7 @@ G6.registerNode(
           y: 25,
           textAlign: 'center',
           textBaseline: 'middle',
-          text: cfg.label || '默认文本', // 使用 cfg.label 或默认文本
+          text: cfg.text || '默认文本', // 使用 cfg.label 或默认文本
           fill: '#000', // 文本颜色
         },
         name: 'text-shape',
@@ -165,6 +201,23 @@ G6.registerEdge(
   'cubic-horizontal',
 );
 
+// tooltip
+const tooltip = new G6.Tooltip({
+  offsetX: 10,
+  offsetY: 20,
+  getContent(e) {
+    const outDiv = document.createElement('div');
+    outDiv.style.width = '180px';
+    outDiv.innerHTML = `
+      <ul>
+        <li>ip地址: ${e.item.getModel().label || e.item.getModel().id}</li>
+        <li>端口: 22</li>
+      </ul>`
+    return outDiv
+  },
+  itemTypes: ['node']
+});
+
 const container = document.getElementById('container');
 const width = container.scrollWidth;
 const height = container.scrollHeight || 500;
@@ -172,6 +225,13 @@ const graph = new G6.Graph({
   container: 'container',
   width,
   height,
+  layout: {
+    type: 'radial', // 使用力导向布局
+    preventOverlap: true, // 防止节点重叠
+    linkDistance: 300, // 节点之间的距离
+    nodeStrength: -100, // 节点之间的斥力
+    edgeStrength: 0.7, // 边的弹簧系数
+  },
   defaultNode: {
     style: {
       fill: '#DEE9FF',
@@ -186,7 +246,8 @@ const graph = new G6.Graph({
   modes: {
     default: ['drag-canvas', 'zoom-canvas'],
     edit: ['click-select'],
-  }
+  },
+  plugins: [tooltip],
 });
 graph.data({ nodes, edges });
 graph.render();
@@ -194,9 +255,17 @@ graph.fitView();
 
 // set hover state
 graph.on('node:mouseenter', (ev) => {
-  const node = ev.item;
-  const edges = node.getEdges();
-  edges.forEach((edge) => graph.setItemState(edge, 'running', true));
+  const node = ev.item; // 获取触发事件的节点
+  // const edges = node.getEdges();
+  // edges.forEach((edge) => graph.setItemState(edge, 'running', true));
+  const model = node.getModel(); // 获取节点的数据模型
+  const label = model.label || '未命名'; // 获取节点的标签，如果没有标签则使用默认值
+  // 显示弹框
+  tooltip.showTooltip({
+    x: ev.clientX,
+    y: ev.clientY,
+    content: label, // 弹框内容，可以是 HTML 字符串
+  });
 });
 graph.on('node:mouseleave', (ev) => {
   const node = ev.item;
@@ -277,6 +346,14 @@ graph.fitView();
 
 - 这一行代码用于调整视图，使整个图适应容器的大小。它会根据当前图的布局和节点位置，自动调整缩放和平移，以确保整个图形在可视区域内可见。
 
+## 布局
+
+### force布局-力导向布局
+
+### radial布局-辐射布局
+
+
+
 ## Node节点
 
 [节点的通用属性](https://g6.antv.antgroup.com/manual/middle/elements/nodes/default-node#%E8%8A%82%E7%82%B9%E7%9A%84%E9%80%9A%E7%94%A8%E5%B1%9E%E6%80%A7)
@@ -307,6 +384,27 @@ defaultNode: {
 效果图如下：
 
 <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20231129141254295.png" alt="image-20231129141254295" style="zoom: 50%;" />
+
+### node.style
+
+设置节点的样式
+
+```js
+nodes.push({
+    id,
+    x: 750,
+    y: i * 100 + 50,
+    type: 'leaf-node',
+    style: { 
+      fill: '#5B8FF9', // 填充色
+      stroke: '#CED4D9' // 描边颜色
+    }
+});
+```
+
+
+
+
 
 ## Antv G6
 
@@ -382,3 +480,48 @@ if (typeof window !== 'undefined') 检查是否浏览器环境
 接着，检查容器元素 `container` 是否存在且具有有效的滚动宽度和高度。
 
 最后，通过 `graph.changeSize` 方法，根据容器的当前滚动宽度和高度，调整图的大小以适应新的窗口尺寸。
+
+
+
+## tooltip
+
+注册
+
+```js
+// tooltip
+const tooltip = new G6.Tooltip({
+  offsetX: 10,
+  offsetY: 20,
+  getContent(e) {
+    const outDiv = document.createElement('div');
+    outDiv.style.width = '180px';
+    outDiv.innerHTML = `
+      <ul>
+        <li>ip地址: ${e.item.getModel().label || e.item.getModel().id}</li>
+        <li>端口: 22</li>
+      </ul>`
+    return outDiv
+  },
+  itemTypes: ['node']
+});
+const graph = new G6.Graph({
+  plugins: [tooltip],
+});
+```
+
+使用
+
+```js
+graph.on('node:mouseenter', (ev) => {
+  const node = ev.item; // 获取触发事件的节点
+  const model = node.getModel(); // 获取节点的数据模型
+  const label = model.label || '未命名'; // 获取节点的标签，如果没有标签则使用默认值
+  // 显示弹框
+  tooltip.showTooltip({
+    x: ev.clientX,
+    y: ev.clientY,
+    content: label, // 弹框内容，可以是 HTML 字符串
+  });
+});
+```
+
