--- a/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
+++ b/docs/frontend/React/1-2.React-Router/6.1-React-Router6.md
@@ -18,8 +18,6 @@ Route组件属性
 - `mergeParams`：在嵌套路由中，是否将父路由的参数合并到子路由中，默认为 `false`。
 - `index`：指定路由为默认路由，即没有匹配的路径时显示的组件。
 - `fallback`：指定当路由匹配时渲染的后备组件（通常在路由懒加载时使用）。
-- `caseSensitive`：指定路由路径是否区分大小写，默认为 `false`。
-- `sensitive`：指定路由是否对 URL 参数区分大小写，默认为 `false`。
 
 其中没有5的component属性了，取而代之的是element属性
 
@@ -158,7 +156,29 @@ function SendInvoice() {
 
 ## React Router6嵌套路由
 
-### 1.使用createBrowserRouter创建配置式路由
+### 1.使用Route组件嵌套实现
+
+```tsx
+<Router>
+  <Suspense fallback={<div>loading...</div>}>
+    {/* <RouterProvider router={router} /> */}
+    <Routes>
+      <Route path="/" element={<Navigate to="/dashboard" />}></Route>
+      <Route path="/dashboard" element={"about"} />
+      <Route path="/settings" element={<div>settings <Outlet /></div>}>
+        {/* 这里为了解决重定向需要新增一条带index的路由 */}
+        <Route index element={<Navigate to='profile' />} />
+        <Route path="profile" element={"profile"} />
+        <Route path="profile2" element={"profile2"} />
+      </Route>
+    </Routes>
+  </Suspense>
+</Router>
+```
+
+使用这种方式能够很好的解决redirect重定向问题
+
+### 2.使用createBrowserRouter创建配置式路由
 
 ```tsx
 const routes: RouteObject[] = [
@@ -200,7 +220,7 @@ const App = () => <RouterProvider router={router} />
      allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
-### 2.使用useRoutes创建配置式路由
+### 3.使用useRoutes创建配置式路由
 
 ```tsx
 const routes: RouteObject[] = []
