[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
+++ b/docs/frontend/React/4.前端常见解决方案/3-前端文件上传与下载.md
@@ -1,12 +1,25 @@
----
-title: 前端文件上传
----
+# 文件上传与下载
 
+## form表单上传
 
+表单上传通常指的是在网页上使用 HTML `<form>` 元素来上传文件或提交数据
 
-## 文件上传
+```html
+<form action="/upload" method="post" enctype="multipart/form-data">
+    <label for="file">选择文件:</label>
+    <input type="file" name="file" id="file">
+    <br>
+    <input type="submit" value="上传">
+</form>
+```
 
-### formdata接口上传
+在上述示例中：
+
+- `enctype="multipart/form-data"` 用于告诉服务器表单数据包含文件。
+- `input` 元素的 `type` 属性设置为 "file"，这样用户就可以选择文件。
+- `action` 属性定义了表单数据将被发送到的服务器端的处理程序。在这里，它被设置为 "/upload"，你需要将其替换为实际的服务器端处理程序的地址。
+
+## formdata上传
 
 [MDN](https://developer.mozilla.org/zh-CN/docs/Web/API/FormData/Using_FormData_Objects)
 
