[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
+++ b/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
@@ -525,3 +525,10 @@ graph.on('node:mouseenter', (ev) => {
 });
 ```
 
+
+
+## 让所有节点都展示在画布中而不用缩放
+
+[GraphOptions.fitView](https://antv-g6.gitee.io/zh/docs/api/Graph/#graphoptionsfitview)
+
+是否开启画布自适应。开启后图自动适配画布大小。
